login page edited

--- a/src/components/LoginComp/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginComp/LoginForm/LoginForm.module.scss
@@ -72,6 +72,15 @@
       padding: 1.95rem 0;
       color: $color-secondary;
       font-size: $font-text;
+
+      &:disabled,
+      &:disabled:hover,
+      &:disabled:active {
+        background-color: #ccc;
+        color: $color-white;
+        border-color: #ccc;
+        cursor: not-allowed;
+      }
     }
   }
 }
