--- a/src/components/UI/LoginBox/LoginBox.module.scss
+++ b/src/components/UI/LoginBox/LoginBox.module.scss
@@ -5,8 +5,7 @@
   width: 100%;
   max-height: 100vh;
 
-  & .img-box,
-  .form-box {
+  & .img-box {
     height: 100vh;
   }
 
@@ -30,6 +29,7 @@
     width: 45%;
     display: flex;
     align-items: center;
+    height: 100vh;
 
     @include respond(miniLaptop) {
       width: 55%;
