--- a/src/components/UI/LoginBox/LoginBox.module.scss
+++ b/src/components/UI/LoginBox/LoginBox.module.scss
@@ -3,7 +3,12 @@
 .container {
   display: flex;
   width: 100%;
-  height: 100vh;
+
+  // height: 100vh;
+
+  & .img-box {
+    height: 100vh;
+  }
 
   & .img-box {
     width: 55%;
@@ -36,6 +41,7 @@
 
     @include respond(phone) {
       width: 100%;
+      height: 80vh;
     }
   }
 }
