--- a/src/components/scss/_mixin.scss
+++ b/src/components/scss/_mixin.scss
@@ -57,3 +57,12 @@
     }
   }
 }
+
+@mixin orient($breakpoint) {
+  @if $breakpoint == phone {
+    @media (orientation: landscape) {
+      //300
+      @content;
+    }
+  }
+}
