sign up page created

--- a/src/components/scss/_mixin.scss
+++ b/src/components/scss/_mixin.scss
@@ -60,7 +60,7 @@
 
 @mixin orient($breakpoint) {
   @if $breakpoint == phone {
-    @media (orientation: landscape) {
+    @media (orientation: landscape) and (max-height: 24.375em) {
       //300
       @content;
     }
