--- a/src/components/DashboardComp/Order/Order.module.scss
+++ b/src/components/DashboardComp/Order/Order.module.scss
@@ -1,10 +1,10 @@
 @import "../../scss/base";
 
-.cart {
-    width: 50%;
+.order {
+    width: 40%;
     display: flex;
     flex-direction: column;
-    padding: 6rem;
+    padding: 6rem 3rem;
     justify-content: center;
 
 
@@ -15,7 +15,7 @@
         margin-bottom: 1rem;
     }
 
-    & .empty-cart {
+    & .empty-order {
         color: $color-primary;
         font-size: 1.7rem;
         font-weight: 600;
@@ -57,7 +57,7 @@
     }
 }
 
-.cart-box {
+.order-box {
     margin-bottom: 3rem;
 }
 
@@ -74,6 +74,12 @@ td:not(.title-box) {
     text-align: left;
 }
 
+.cooking {
+    font-size: 1.5rem;
+    color: #FF3A44;
+    font-weight: 500;
+
+}
 
 .title-box {
     display: flex;
@@ -91,6 +97,7 @@ td:not(.title-box) {
         font-weight: 500;
         color: #C92C33;
         text-align: left;
+
     }
 
     &-img {
