--- a/src/components/LoginComp/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginComp/LoginForm/LoginForm.module.scss
@@ -53,6 +53,10 @@
       border: 1px solid red;
     }
 
+    & .email-div {
+      width: 100%;
+    }
+
     & .password-div {
       width: 100%;
       margin: 4.8rem 0;
