--- a/src/components/DashboardComp/AddToCart/AddToCart.module.scss
+++ b/src/components/DashboardComp/AddToCart/AddToCart.module.scss
@@ -1,16 +1,35 @@
 @import "../../scss/base";
+@import "../../scss/mixin";
+
 
 .child-box {
     width: 35%;
     display: flex;
     flex-direction: column;
-    padding: 0 6rem;
+    padding: 6rem;
     align-items: center;
     text-align: center;
-    justify-content: center;
+    // justify-content: center;
 
+    @include respond(miniLaptop) {
+        justify-content: flex-start;
+        width: 50%;
+        min-height: 100vh;
+        overflow: auto;
+        // height: min-content;
+    }
 
+    @include respond(bigTablet) {
+        width: 60%;
+    }
 
+    @include respond(midTablet) {
+        width: 70%;
+    }
+
+    & .img {
+        margin-top: 2rem;
+    }
 
     & .text {
 
