--- a/src/components/DashboardComp/Cart/Cart.module.scss
+++ b/src/components/DashboardComp/Cart/Cart.module.scss
@@ -1,4 +1,6 @@
 @import "../../scss/base";
+@import "../../scss/mixin";
+
 
 .cart {
     width: 50%;
@@ -6,6 +8,22 @@
     flex-direction: column;
     padding: 6rem;
     justify-content: center;
+
+    @include respond(bigTablet) {
+        width: 65%;
+        padding: 4rem;
+    }
+
+    @include respond(midTablet) {
+        width: 70%;
+        padding: 3rem;
+    }
+
+    @include respond(phone) {
+        padding: 2rem;
+    }
+
+
 
 
     & .heading {
@@ -49,6 +67,10 @@
         font-size: 1.3rem;
         font-weight: 600;
         border: 1px solid $color-primary;
+
+        @include respond(bigTablet) {
+            width: 100%;
+        }
 
         &:hover {
             background-color: transparent;
