--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -1,7 +1,9 @@
 @import "../../scss/base";
+@import "../../scss/mixin";
+
 
 .modal-box {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -14,5 +16,28 @@
         margin-left: auto;
         background-color: $color-white;
         cursor: default;
+
+
+
+        @include respond(phone) {
+            width: 100%;
+            min-height: 100vh;
+        }
+    }
+}
+
+.back-btn {
+    align-self: flex-start;
+    background: transparent;
+    color: $color-primary;
+    border: 1px solid $color-primary;
+    padding: .5rem 1.5rem;
+    font-size: $font-text;
+    margin: 2rem 0;
+
+
+    &:hover {
+        background-color: $color-primary;
+        color: $color-white;
     }
 }
