--- a/src/components/DashboardComp/Cart/Cart.module.scss
+++ b/src/components/DashboardComp/Cart/Cart.module.scss
@@ -16,12 +16,10 @@
 
     @include respond(midTablet) {
         width: 70%;
-        padding: 3rem;
+        padding: 2rem 2rem 7rem;
     }
 
-    @include respond(phone) {
-        padding: 2rem;
-    }
+
 
 
 
