--- a/src/components/DashboardComp/Checkout/Checkout.module.scss
+++ b/src/components/DashboardComp/Checkout/Checkout.module.scss
@@ -6,7 +6,7 @@
     width: 35%;
     display: flex;
     flex-direction: column;
-    padding: 0 2rem 5rem;
+    padding: 6rem 2rem 5rem;
 
     @include respond(miniLaptop) {
         width: 50%;
@@ -18,6 +18,8 @@
 
     @include respond(midTablet) {
         width: 75%;
+        padding: 3rem 2rem 7rem;
+
     }
 
     &-heading {
