--- a/src/components/DashboardComp/Order/Order.module.scss
+++ b/src/components/DashboardComp/Order/Order.module.scss
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     padding: 6rem 3rem;
-    justify-content: center;
+    // justify-content: center;
 
     @include respond(bigTablet) {
         width: 60%;
@@ -15,12 +15,15 @@
 
     @include respond(midTablet) {
         width: 75%;
+        justify-content: flex-start;
+        -webkit-justify-content: flex-start;
     }
 
 
 
     @include respond(phone) {
-        padding: 6rem 1.5rem;
+        padding: 3rem 2rem 6rem;
+
     }
 
     & .heading {
@@ -34,7 +37,7 @@
         color: $color-primary;
         font-size: 1.7rem;
         font-weight: 600;
-        margin-bottom: 1rem;
+        margin: 3rem 0 1rem;
         text-align: center;
     }
 
