--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -33,8 +33,7 @@
     border: 1px solid $color-primary;
     padding: .5rem 1.5rem;
     font-size: $font-text;
-    margin: 2rem 0;
-
+    margin-bottom: 1rem;
 
     &:hover {
         background-color: $color-primary;
