--- a/src/components/DashboardComp/Cart/Cart.module.scss
+++ b/src/components/DashboardComp/Cart/Cart.module.scss
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     padding: 6rem;
-    justify-content: center;
+    // justify-content: center;
 
     @include respond(bigTablet) {
         width: 65%;
@@ -32,12 +32,22 @@
     }
 
     & .empty-cart {
-        color: $color-primary;
-        font-size: 1.7rem;
-        font-weight: 600;
-        margin-bottom: 1rem;
-        text-align: center;
+        margin: auto 0;
+
+        &-p {
+            color: $color-primary;
+            font-size: 1.7rem;
+            font-weight: 600;
+            margin-bottom: 1rem;
+            text-align: center;
+        }
+
+        &-img {
+            margin-top: 3rem;
+        }
     }
+
+
 
 
 
@@ -117,5 +127,6 @@ td:not(.title-box) {
         width: 5rem;
         height: 5rem;
         margin-right: 1.7rem;
+        align-self: center;
     }
 }
