--- a/src/components/UI/LoginBox/LoginBox.module.scss
+++ b/src/components/UI/LoginBox/LoginBox.module.scss
@@ -33,7 +33,9 @@
   & .form-box {
     width: 45%;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    // justify-content: center;
+
 
     @include respond(miniLaptop) {
       width: 55%;
