--- a/src/components/DashboardComp/DashboardMain/DashboardMain.module.scss
+++ b/src/components/DashboardComp/DashboardMain/DashboardMain.module.scss
@@ -43,6 +43,20 @@
         }
     }
 
+    & .user-img {
+        width: 7rem;
+        height: 7rem;
+        border-radius: 50%;
+        margin-left: auto;
+        overflow: hidden;
+
+        & img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+
     & .name-sign {
         margin-left: auto;
         border-radius: 50%;
