--- a/src/components/UI/GridBoxAndItem/GridBox.module.scss
+++ b/src/components/UI/GridBoxAndItem/GridBox.module.scss
@@ -3,14 +3,14 @@
 
 .list-container {
     flex: 1;
-    width: 100%;
     overflow-y: scroll;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(23rem, 1fr));
-    grid-column-gap: 8rem;
-    grid-row-gap: 6rem;
-    padding: 2rem 1rem 4rem;
-    list-style-type: none;
+    grid-template-columns: repeat(3, 25rem);
+    grid-template-rows: max-content;
+    grid-auto-rows: max-content;
+    grid-row-gap: 4rem;
+    justify-content: space-between;
+    padding: 2rem 2rem 4rem 0rem;
 
     @include respond(bigTablet) {
         grid-row-gap: 3rem;
