--- a/src/components/UI/GridBoxAndItem/MealItem.module.scss
+++ b/src/components/UI/GridBoxAndItem/MealItem.module.scss
@@ -6,22 +6,41 @@
     flex-direction: column;
     background-color: rgba(255, 255, 255, 0.83);
     border: 0.3px solid rgba(0, 48, 46, 0.14);
-    border-radius: .5rem;
+    border-radius: 8px;
     align-items: center;
     text-align: center;
-    padding: 2.3rem 2.9rem;
-    box-shadow: .1rem .1rem 1rem .2rem rgba($color-black, .1);
+    box-shadow: .1rem .1rem 1.5rem .1rem rgba($color-black, .1);
+    position: relative;
 
 
     & .meal-img {
-        margin: 2.4rem 0 1.3rem;
+        overflow: hidden;
+        cursor: pointer;
+        width: 100%;
+        height: 15rem;
+
+
+
+        & img {
+            width: 25rem;
+            height: 15rem;
+            object-fit: cover;
+            transition: all .3s ease;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
+
+            &:hover {
+                transform: scale(1.3);
+            }
+        }
     }
 
     & .meal-text {
-        margin: .5rem 0 3rem;
+        margin: .5rem 0 1.5rem;
         font-size: 1.1rem;
         font-weight: 400;
         color: rgba(0, 0, 0, 0.69);
+        padding: 1rem;
 
         @include respond(phone) {
             padding: 0rem 2rem;
@@ -33,6 +52,7 @@
         font-size: 1.7rem;
         font-weight: 600;
         color: $color-primary;
+        margin-top: 2rem;
     }
 
     & .meal-amount-box {
@@ -41,6 +61,7 @@
         justify-content: space-between;
         font-size: 1.3rem;
         margin-top: auto;
+        padding: 1rem;
 
 
 
@@ -63,4 +84,22 @@
             }
         }
     }
+}
+
+.favourite-icon {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    width: 3rem;
+    height: 3rem;
+    z-index: 20;
+    cursor: pointer;
+}
+
+.favourite-true {
+    color: $color-red;
+}
+
+.favourite-false {
+    color: $color-white;
 }
