--- a/src/components/UI/GridBoxAndItem/VendorItem.module.scss
+++ b/src/components/UI/GridBoxAndItem/VendorItem.module.scss
@@ -9,6 +9,68 @@
     border: 0.3px solid rgba(0, 48, 46, 0.14);
     border-radius: .5rem;
     text-align: center;
-    padding: 2.3rem 2.9rem;
     box-shadow: .1rem .1rem 1rem .2rem rgba($color-black, .1);
+
+    & .vendor-img {
+        overflow: hidden;
+        cursor: pointer;
+        width: 100%;
+        height: 15rem;
+
+        & img {
+            width: 25rem;
+            height: 15rem;
+            object-fit: cover;
+            transition: all .3s ease;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
+
+            &:hover {
+                transform: scale(1.3);
+            }
+        }
+    }
+
+    & h3 {
+        font-size: 1.7rem;
+        font-weight: 600;
+        color: $color-primary;
+        margin-top: 2rem;
+    }
+
+    & .vendor-text {
+        margin: .5rem 0 0;
+        font-size: 1.4rem;
+        font-weight: 400;
+        color: rgba(0, 0, 0, 0.69);
+
+        & span {
+            font-weight: 600;
+            color: $color-primary;
+        }
+
+        @include respond(phone) {
+            padding: 0rem 2rem;
+        }
+
+    }
+
+    & .btn {
+        margin: 1.5rem 0;
+        padding: 1rem 2rem;
+        background-color: $color-primary;
+        color: $color-white;
+        font-size: 1.4rem;
+        border: 1px solid $color-primary;
+        border-radius: 8px;
+        cursor: pointer;
+        font-weight: 600;
+        transition: all .3s ease;
+
+
+        &:hover {
+            background-color: $color-white;
+            color: $color-primary;
+        }
+    }
 }
