added more colors to the base file

--- a/src/components/scss/_base.scss
+++ b/src/components/scss/_base.scss
@@ -9,6 +9,7 @@ $color-error: rgba($color: red,
     $alpha: 0.5,
   );
 $color-black: #000000;
+$color-red: red;
 
 $font-primary: "Poppins", sans-serif;
 $font-secondary: "Inter", sans-serif;
