--- a/src/components/UI/GridBoxAndItem/MealItem.module.scss
+++ b/src/components/UI/GridBoxAndItem/MealItem.module.scss
@@ -11,6 +11,7 @@
     text-align: center;
     box-shadow: .1rem .1rem 1.5rem .1rem rgba($color-black, .1);
     position: relative;
+    overflow: hidden;
 
 
     & .meal-img {
@@ -22,12 +23,11 @@
 
 
         & img {
-            width: 25rem;
+            width: 100%;
             height: 15rem;
             object-fit: cover;
             transition: all .3s ease;
-            border-top-left-radius: 8px;
-            border-top-right-radius: 8px;
+
 
             &:hover {
                 transform: scale(1.3);
